<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment1"
    android:id="@+id/fragment2">

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/topText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_2"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/bnToFirst"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/bnToFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_first"
                app:layout_constraintTop_toBottomOf="@id/topText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/bnToThird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_third"
                app:layout_constraintTop_toBottomOf="@id/bnToFirst"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bnToAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_about"
                    android:layout_gravity="center" />
            </LinearLayout>
        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>
</FrameLayout>